My first commit

--- a/bootstrap-3.3.7-dist/css/bootstrap.css
+++ b/bootstrap-3.3.7-dist/css/bootstrap.css
@@ -6809,6 +6809,9 @@ button.close {
 .proj2{
   background-color: #f2f2f2;
 }
+.proj3{
+   background-color: #fff;
+}
 body{
   background-color: #c0e5e2/*#dbfffc*/;
 }
